# minecraft-server-central-api

./: .env.prod  Dockerfile-nginx  TODO.txt  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docker_boot.service  docker_compose_up.py  mscwebapp.env  mscwebapplocal.env  nginx.conf  nginx.local.conf  pyproject.toml  samconfig.toml  template.yaml
alembic/: env.py
alembic/versions/: 02df7d5d6116_create_initial_server_history.py  05b8ed7117af_add_minecraft_version_table.py  0d1664d2c354_add_favicon_to_server.py  19bcd782faab_simplify_and_secure_auction_creation.py  1f0572bacc66_add_rank_to_server_history.py  28946b6f137a_add_banner_filetype.py  2c697ceba394_one_bid_per_server.py  33184a24083a_update_sponsored_table.py  44f8dbbdb176_add_initial_tag_table.py  54750c4a85e0_add_server_gameplay_table.py  6c06fe4971a6_add_server_table.py  714e71c98090_add_search_index.py  78fe2f0a8299_add_auction_tables.py  7a1785dcaeb3_add_is_current_auction.py  7bf67b7be656_add_uptime_vote_history_table.py  826cea83ee0f_add_bedrock_ip_address.py  8ce723b0a06b_add_banner_url_to_server.py  958e94968158_add_client_ip_to_vote_table.py  9c2e8ff53760_add_deletion_flag_to_server_table.py  b31331e21837_initial.py  b52cbd3175f0_remove_all_tables.py  b79cf7b79c42_add_vote_info_to_server_history.py  b9d749883f85_add_video_and_owner_name.py  c8c3879f8de2_create_vote_and_user_tables.py  cad777ec0c35_delete_gameplay_table.py  cb51bb611dcb_add_web_store.py  cc860a174a64_add_minecraft_username_to_vote_table.py  cf7ef8c76001_add_banner_and_icon_checksum.py  d14aa912d23f_add_payment_status.py  d2a9fe23bc2e_add_uptime_to_server_history.py  (+4 more)
core/: Makefile
docker/: Dockerfile  docker-entrypoint.sh
lambdas/server/: app.py  (+1 more)
msc/: Dockerfile  __init__.py  app.py  asgi.py  config.py  constants.py  database.py  errorhandling.py  errors.py  loggingutil.py  main.py  requirements.txt
scripts/: build_api.py  deploy_api.py  docker_compose_up.py
tests/: conftest.py  test_app.py  test_database.py  test_server.py  test_temp_script.py  test_versions.txt
(+74 files in other folders)
