[tool.poetry]
name = "msc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.20"
pydantic = "1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
start_docker = "scripts.docker_compose_up:main"
build_api = "scripts.build_api:main"
deploy_api = "scripts.deploy_api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
