[tool.poetry]
name = "msc"
version = "0.1.0"
description = ""
authors = ["Jack Collis <jackcollis96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.103.1"
python = "^3.9"
sqlalchemy = "^2.0.20"
pydantic = "1.10.2"
alembic = "^1.11.1"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
autopep8 = "^2.0.2"

[tool.poetry.scripts]
start_docker = "scripts.docker_compose_up:main"
build_api = "scripts.build_api:main"
deploy_api = "scripts.deploy_api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
